rbac/main/default/objects/ClientRole__c/ClientRole__c.object-meta.xml
<CustomObject>
    <label>ClientRole</label>
    <nameField>
        <displayFormat>ClientRole-{0000}</displayFormat>
        <label>ClientRole Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClientRoles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>