rbac/main/default/objects/ClientRole__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>cym__Client__c</referenceTo>
    <relationshipLabel>ClientRoles</relationshipLabel>
    <relationshipName>ClientRoles</relationshipName>
    <type>Lookup</type>
</CustomField>