rbac/main/default/objects/ClientRole__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of the role</inlineHelpText>
    <label>Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>