rbac/main/default/objects/ClientRole__c/fields/IsRequiredForLogin__c.field-meta.xml
<CustomField>
    <fullName>IsRequiredForLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Role Required For Login</label>
    <type>Checkbox</type>
</CustomField>