rbac/main/default/objects/ClientRole__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Technical Name for the role</inlineHelpText>
    <label>Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>